react-app/src/components/Comments/comments.css
.comments_container {
    display: flex;
    position: relative;
    justify-content: center;
    align-items: center;
    flex-direction: column;


}

.view_comments {
    display: flex;
    justify-content: center;

}
.posted_comments_container{
    display: flex;
    position: relative;
    flex-direction: column-reverse;
    justify-content: space-between;
}

.posted_comments {
    display: flex;
    position: relative;
    flex-direction: column;
    list-style: none;
    border-bottom: 1px solid rgb(182, 182, 182);
    padding: 20px;

}

.edit_delete_box {
    display: flex;
    position: relative;
    flex-direction: row;
    padding-top: 15px;
}

.comment-delete-btn{
    background-color: #ff767666;
    color: #fcfcfc;
}

.comment-delete-btn:hover {
    background-color: #ff7676d2;
    color:white;
}

